<resources>
    <string name="app_name">Android_Import_It_Application</string>
    <string name="customers_orders">Órdenes del usuario</string>
    <string name="wallet">Finanzas</string>
    <string name="my_trips">My trips</string>
    <string name="my_chats">Mis Chats</string>
    <string name="creado_por_1">Creado por: </string>
    <string name="location_1">Lima, Peru</string>
    <string name="platform_1">Ebay</string>
    <string name="txt_1">250 g/ flexible</string>
    <string name="price_1_1">55$</string>
    <string name="price_2_1">10$</string>
    <string name="product_1">Mochila Adidas GX900</string>
    <string name="select_product">Seleccionar producto</string>
    <string name="order_1">Order 000001542933</string>
    <string name="creado_por_2">Creado por Raúl Contreras</string>
    <string name="location_2">Lima, Peru</string>
    <string name="platform_2">Amazon</string>
    <string name="txt_2">100 g/ flexible</string>
    <string name="price_2_2">15$</string>
    <string name="price_1_2">60$</string>
    <string name="product_2">Apple watch series 3</string>
    <string name="order_2">Order 000001845679</string>
    <string name="orders_title">Órdenes</string>
    <string name="back_button"><![CDATA[<<Back]]></string>
    <string name="button_back"><![CDATA[<<Back]]></string>
    <string name="no_orders">No Orders</string>
    <string name="without_connection">Without connection</string>
    <string name="date">Fecha</string>
    <string name="description">Descripción</string>
    <string name="product">Producto</string>
    <string name="valid">Valid</string>
    <string name="in_process">En proceso</string>
    <string name="not_valid">Not Valid</string>
    <string name="incomes">Ingresos</string>
    <string name="wallet1">Finanzas</string>
    <string name="_189">$189</string>
    <string name="maria_pilar">Maria Pilar</string>
    <string name="_29_08_2022">29/08/2022</string>
    <string name="reloj_guess">Reloj Guess</string>
    <string name="income_0000001232221">Income 0000001232221</string>
    <string name="btn_valid">Valid</string>
    <string name="tvincomes">Ingresos</string>
    <string name="import1">Importe</string>
    <string name="an_error_occurred_load_again">An error occurred load again</string>
    <string name="_10_07_2022">10/07/2022</string>
    <string name="_0000002001231">0000002001231</string>
    <string name="guess_black">Guess Black</string>
    <string name="_30">$30</string>
    <string name="see_more">ver más</string>
    <string name="_03_08_2022">03/08/2022</string>
    <string name="_0000001432212">0000001432212</string>
    <string name="macbook_pro">Macbook Pro</string>
    <string name="_162">$162</string>
    <string name="_15_08_2022">15/08/2022</string>
    <string name="_0000001572232">0000001572232</string>
    <string name="iphone_12">iPhone 12</string>
    <string name="_50">$50</string>
    <string name="_29_08_2022_1">29/08/2022</string>
    <string name="_0000001232221_1">0000001232221</string>
    <string name="samsung_flex">Samsung Flex</string>
    <string name="_30_1">$30</string>
    <string name="no_incomes">No Incomes</string>
    <string name="importit">ImportIt</string>
    <string name="domestic_shipments">Envíos a domicilio</string>
    <string name="directions">Direcciones</string>
    <string name="chats">Chats</string>
    <string name="orders">Órdenes</string>
    <string name="order">order</string>
    <string name="dashboard">dashboard</string>
    <string name="coupons">Cupones</string>
    <string name="calculator">Calculadora</string>
    <string name="configuration">configuracion</string>
    <string name="perfil">perfil</string>
    <string name="costumer_service">costumer_service</string>
    <string name="filter">Filter</string>
    <string name="arrow">arrow</string>
    <string name="type">Traveler</string>
    <string name="name_product">Nombre del producto:</string>
    <string name="total_price">Precio total:</string>
    <string name="result">$600.00</string>
    <string name="proceed_to_pay">Proceder a pagar</string>
    <string name="tvweight">Weight:</string>
    <string name="tvtotal_size">Total size:</string>
    <string name="type_o_importation">Type o importation:</string>
    <string name="line">line</string>
    <string name="cellphone">cellphone</string>
    <string name="add_new_target">Añadir nueva tarjeta</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="hCard_number">xxxx-xxxx</string>
    <string name="card_information">Información de la tarjeta</string>
    <string name="expire_date">Fecha de expiración</string>
    <string name="ccv">CCV</string>
    <string name="h_ccv">xxx</string>
    <string name="h_expire_date">xx/xx</string>
    <string name="target_cards">target cards</string>
    <string name="correct_payment">Pago correcto</string>
    <string name="back">Atrás</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="coupon">coupon</string>
    <string name="fasty">Fasty</string>
    <string name="my_orders_fragment">Mis órdenes</string>
    <string name="btnDeleteMyOrders">Borrar</string>
    <string name="deleteWSM">Borrar</string>
    <string name="buyer">Buyer</string>
    <string name="traveler">Traveler</string>
    <string name="done">Hecho</string>
    <string name="all">Todo</string>
    <string name="calculate">Calculate</string>
    <string name="calculate_the_price_before_you_buy">Calcula el precio antes de comprar!!!</string>
    <string name="choose_a_category">Elige una categoría</string>
    <string name="subtotal">SubTotal</string>
    <string name="approximated_cost">Approximated Cost</string>
    <string name="cost">Cost</string>
    <string name="subtotal1">SubTotal</string>
    <string name="textsubtotal">El costo antes de impuestos o cupones</string>
    <string name="textcategory">Elija una de las opciones más comunes</string>
    <string name="textcomision">¿Cuánto se le cobrará según la categoría del producto?</string>
    <string name="comission_range">Rango de comisión</string>
    <string name="textappcost">El precio aproximado es: </string>
    <string name="textrestrictions">**El precio puede variar dependiendo del producto final pedido y en base a la comisión preferida del viajero. El precio final puede rondar el precio aproximado que se muestra a la derecha.</string>
    <string name="dollar">$</string>
    <string name="dollarr">$</string>
    <string name="c_mo_quieres_iniciar_sesi_n">¿Cómo quieres iniciar sesión?</string>
    <string name="comprador">Comprador</string>
    <string name="viajero">Viajero</string>
    <string name="lineabaja">_____________________________________________________________</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n1">Iniciar sesión</string>
    <string name="no_tienes_una_cuenta_reg_strate">¿No tienes una cuenta? Regístrate</string>
    <string name="t_tulo">Título</string>
    <string name="titulo_de_la_orden">Titulo de la Orden</string>
    <string name="url_del_producto">Url del producto</string>
    <string name="url">URL</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="nombre_del_producto1">Nombre del Producto</string>
    <string name="cantidad_de_productos">Cantidad de productos</string>
    <string name="cantidad_de_productos1">Cantidad de Productos</string>
    <string name="precio_del_producto">Precio del Producto</string>
    <string name="precio">Precio</string>
    <string name="peso_del_producto">Peso del producto</string>
    <string name="peso">Peso</string>
    <string name="registrar_orden">Registrar Orden</string>
    <string name="registro_de_rdenes">Registro de órdenes</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="nombre">Nombre:</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="edad">Edad:</string>
    <string name="dni">DNI:</string>
    <string name="celular">Celular:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="slash">/</string>
    <string name="nombre1">Nombre:</string>
    <string name="nombre2">Nombre</string>
    <string name="dni1">DNI:</string>
    <string name="dni2">DNI</string>
    <string name="email">Email:</string>
    <string name="email1">Email</string>
    <string name="direcci_n1">Dirección:</string>
    <string name="direcci_n2">Dirección</string>
    <string name="fecha_de_nacimiento1">Fecha de Nacimiento:</string>
    <string name="fecha_de_nacimiento2">Fecha de Nacimiento</string>
    <string name="edad1">Edad:</string>
    <string name="edad2">Edad</string>
    <string name="g_nero">Género:</string>
    <string name="g_nero1">Género</string>
    <string name="nro_de_celular">Nro. de celular:</string>
    <string name="celular1">Celular</string>
    <string name="contrase_a1">Contraseña:</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrarse1">Registrarse</string>
    <string name="ingrese_cup_n">Ingrese Cupón</string>
    <string name="si_tiene_un_c_digo_de_cup_n_ingrese_los_caracteres_en_el_cuadro_a_continuaci_n_para_validar_su_validez">Si tiene un código de cupón, ingrese los caracteres en el cuadro a continuación para validar su validez.</string>
    <string name="si_tiene_un_c_digo_de_cup_n_ingrese_los_caracteres_en_el_cuadro_a_continuaci_n_para_validar_su_validez1">Si tiene un código de cupón, ingrese los caracteres en el cuadro a continuación para validar su validez.</string>
    <string name="visa_termina_en_2145">Visa termina en 2145</string>
    <string name="mastercard_termina_en_00000">Mastercard termina en 00000</string>
    <string name="cantidad3">Cantidad:</string>
    <string name="date1">Date</string>
    <string name="agregate_direction">Agregar Dirección</string>
    <string name="load_direction">Cargar Dirección</string>
    <string name="textview">text</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="departamento">Departamento</string>
    <string name="ingresa_departamento">Ingresa Departamento</string>
    <string name="direcci_n3">Dirección</string>
    <string name="ingresa_direcci_n">Ingresa Dirección</string>
    <string name="distrito">Distrito</string>
    <string name="ingresa_distrito">Ingresa Distrito</string>
    <string name="dni3">DNI</string>
    <string name="ingresa_dni">Ingresa DNI</string>
    <string name="apellido">Apellido</string>
    <string name="ingresa_apellido">Ingresa Apellido</string>
    <string name="nombre3">Nombre</string>
    <string name="ingresa_nombre">Ingresa Nombre</string>
    <string name="ingresa_nro_de_celular">Ingresa nro de Celular</string>
    <string name="provincia">Provincia</string>
    <string name="ingresa_provincia">Ingresa Provincia</string>
    <string name="guardar">Guardar</string>
    <string name="descartar">Descartar</string>
    <string name="ingresar_dni">Ingresar DNI:</string>
    <string name="buscar">Buscar</string>
    <string name="google_maps_api_key">AIzaSyAIL7NdSWsyDZYGg3dj_9ns-RaR8ZzwVdo</string>
    <string name="aceptar_t_rminos">Aceptar Términos</string>
    <string name="aceptar_t_rminos_y_condiciones">Aceptar Términos y Condiciones</string>
    <string name="cambio_de_contrase_a">Cambio de contraseña</string>
    <string name="escriba_su_contrase_a">Escriba su nueva contraseña</string>
    <string name="repita_su_contrase_a">Repita su contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="ingrese_dni">Ingrese DNI:</string>
    <string name="continuar">Continuar</string>
    <string name="my_profile">Mi Perfil</string>
</resources>