<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".controllers.activities.DirectionFormAgregateBuyerActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="377dp"
        android:layout_height="629dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departamento" />

        <EditText
            android:id="@+id/editTextDepartament"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_departamento" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direcci_n3" />

        <EditText
            android:id="@+id/editTextDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_direcci_n" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distrito" />

        <EditText
            android:id="@+id/editTextDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_distrito" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dni3" />

        <EditText
            android:id="@+id/editTextDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_dni" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellido" />

        <EditText
            android:id="@+id/editTextLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_apellido" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre3" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_nombre" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celular" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_nro_de_celular" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provincia" />

        <EditText
            android:id="@+id/editTextProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresa_provincia" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/buttonDiscard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descartar" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/ibBackDirectionForm"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha" />

</androidx.constraintlayout.widget.ConstraintLayout>

