<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.DescriptionItemActivity">

    <ImageView
        android:id="@+id/ivDescription"
        android:layout_width="305dp"
        android:layout_height="325dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="250dp"
        android:contentDescription="@string/cellphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/cell" />

    <TextView
        android:id="@+id/tvDescriptionItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="170dp"
        android:text="@string/description"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idline" />

    <ImageView
        android:id="@+id/idline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="@string/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDescription"
        app:srcCompat="@drawable/line" />

    <Button
        android:id="@+id/bProceedPay"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="24dp"
        android:text="@string/proceed_to_pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ibArrowD"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha" />

    <TextView
        android:id="@+id/tvProductNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvProductName"
        app:layout_constraintStart_toEndOf="@+id/tvProductName"
        tools:text="Nombre del producto" />

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/name_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionItem" />

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="17dp"
        android:text="@string/total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

    <TextView
        android:id="@+id/tvPriceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvTotalPrice"
        app:layout_constraintStart_toEndOf="@+id/tvTotalPrice"
        tools:text="Precio" />

</androidx.constraintlayout.widget.ConstraintLayout>