<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView44"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="73dp"
        android:text="@string/wallet1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="379dp"
        android:layout_height="282dp"
        android:background="#B9D4E5"
        android:backgroundTint="#B9D4E5"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="123dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvWeight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="16dp"
                android:text="@string/_189"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUrl" />

            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="13dp"
                android:text="@string/maria_pilar"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLocationProduct" />

            <TextView
                android:id="@+id/tvLocationProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="22dp"
                android:text="@string/_29_08_2022"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleProduct" />

            <TextView
                android:id="@+id/tvTitleProduct"
                android:layout_width="76dp"
                android:layout_height="20dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="35dp"
                android:text="@string/reloj_guess"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="154dp"
                android:layout_height="27dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="29dp"
                android:text="@string/income_0000001232221"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSelect"
                android:layout_width="87dp"
                android:layout_height="34dp"
                android:layout_marginStart="195dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="#787878"
                android:text="@string/btn_valid"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.448"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="138dp"
                android:layout_height="136dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSelect"
                app:srcCompat="@drawable/_41895818_6014809445283225_366575880954661052_n" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/back_button"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>